Bug 392822 - Places panel entries are untranslated
Summary: Places panel entries are untranslated
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-07 09:28 UTC by Antonio Rojas
Modified: 2018-04-12 20:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2018-04-07 09:28:28 UTC
In 18.04, the standard places panel entries (Home, Root, Documents, Images...) are not translated. Tested in a few different languages.
Comment 1 Julian Steinmann 2018-04-07 15:20:32 UTC
Could you specify in which languages the entries are not translated? I cannot reproduce this behavior with German as the application language.
Comment 2 Antonio Rojas 2018-04-07 17:45:08 UTC
(In reply to Julian Schraner from comment #1)
> Could you specify in which languages the entries are not translated? I
> cannot reproduce this behavior with German as the application language.

es_ES, fr_FR, de_DE, zh_CN
Comment 3 Julian Steinmann 2018-04-07 19:37:28 UTC
I am not able tor reproduce this bug with Dolphin 17.12.3 or Dolphin 18.07.70 (master). But then I also cannot see any commit which would have changed anything regarding this panel between 18.04 and master: https://phabricator.kde.org/source/dolphin/compare/?head=master&against=Applications%2F18.04

I don't really know what could cause this bug, but we should surely try to triage it soon-ish because 18.04 is just around the corner.
Comment 4 Antonio Rojas 2018-04-07 20:49:43 UTC
This is with 18.04 (beta and RC) as I said - those versions are not available in the drop down list. It works fine in 17.12.x. Not sure how to test it in master since git doesn't contain translations.
You may have some translated entries in user-places.xbel which are being displayed. This should be tested with an empty user-places.xbel
Comment 5 Julian Steinmann 2018-04-09 19:45:24 UTC
Even after removing user-places.xbel & trying with a completely new account I am still unable to reproduce this bug, so I won't be very helpful for triaging. I also looked through any possible changes in the translations but there's nothing related to the Places panel... 

I'll set the status to UNCONFIRMED (even though I believe you that this bug is indeed happening) so that other triagers or developers can try to reproduce this behavior. Thanks for your report!
Comment 6 Antonio Rojas 2018-04-09 20:23:21 UTC
Translations were removed in this svn commit

https://websvn.kde.org/?limit_changes=0&view=revision&revision=1506626

I guess this is when places handling was moved to kio. Perhaps the translations were lost in the process?
Comment 7 Antonio Rojas 2018-04-11 17:05:23 UTC
Patch at https://phabricator.kde.org/D12119

@Julian no idea how this can be working for you. Perhaps you have an old dolphin.mo lying around that is being loaded?
Comment 8 Julian Steinmann 2018-04-11 17:39:10 UTC
Hmm, my dolphin.mo has been modified on the 14th of March, which might be too old (even though shouldn't be...). Anyways, it's not that important as you now have created a patch which should resolve the problems for everyone :)
Comment 9 Antonio Rojas 2018-04-12 20:50:12 UTC
Git commit ed5102a5fd7ad3fa569f7e0af66171c0b19c2a3b by Antonio Rojas.
Committed on 12/04/2018 at 20:49.
Pushed by arojas into branch 'Applications/18.04'.

Fix untranslated places panel entries

Load the places panel entries strings from the kio5 catalog, where they live now
Differential Revision: https://phabricator.kde.org/D12119

M  +2    -2    src/panels/places/placesitem.cpp

https://commits.kde.org/dolphin/ed5102a5fd7ad3fa569f7e0af66171c0b19c2a3b