Fix untranslated places panel entries

Load the places panel entries strings from the kio5 catalog, where they live now

BUG: 392822
Differential Revision: https://phabricator.kde.org/D12119